--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,23 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h2 class="text-center">Face Recognition App</h2>
-<div class="text-center">
-    <a href="/capture" class="btn btn-danger">Tambah Wajah</a>
-    <br>
-    <br>
-    <a href="/camera" class="btn btn-primary">Ambil Gambar dengan Kamera</a>
-    <form method="POST" action="/upload" enctype="multipart/form-data" class="mt-3">
-        <div class="form-group">
-            <label for="file">Atau pilih gambar wajah:</label>
-            <input type="file" class="form-control-file" id="file" name="file" accept="image/*" required>
+<div class="container">
+    <h2 class="text-center mb-4">Face Recognition App</h2>
+    <div class="text-center">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <a href="/capture" class="btn btn-danger btn-lg mb-3 w-100">Tambah Wajah</a>
+                <a href="/camera" class="btn btn-primary btn-lg mb-4 w-100">Ambil Gambar dengan Kamera</a>
+                
+                <form method="POST" action="/upload" enctype="multipart/form-data">
+                    <div class="form-group mb-3">
+                        <label for="file" class="form-label">Atau pilih gambar wajah:</label>
+                        <input type="file" class="form-control" id="file" name="file" accept="image/*" required>
+                    </div>
+                    <button type="submit" class="btn btn-success btn-lg w-100">Unggah dan Kenali Wajah</button>
+                </form>
+            </div>
         </div>
-        <button type="submit" class="btn btn-success btn-block">Unggah dan Kenali Wajah</button>
-    </form>
+    </div>
 </div>
 {% endblock %}
